<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/today"
        android:icon="@drawable/ic_baseline_wb_sunny_24"
        android:contentDescription="@string/cd_today_pet"
        android:title="@string/cd_today_pet" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:contentDescription="@string/cd_search"
        android:title="@string/cd_search" />
    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:contentDescription="@string/cd_chat"
        android:title="@string/cd_chat" />

    <item
        android:id="@+id/my"
        android:icon="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/cd_me"
        android:title="@string/cd_me" />
</menu>
